Grace/tests/gibbs/errors/t195.grace
// ERROR = P1004
if ) then {
    print "something"
}
